Fixed HTML and started on CSS stuck at moving the title/button/image

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -49,7 +49,7 @@ table {
 
 /* Set every element's box-sizing to border-box */
 * {
-    box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 html, body {
@@ -64,3 +64,38 @@ h1, h2, h3, h4, h5 {
 }
 
 /* Your code starts here! */
+nav
+{
+	text-align: center;
+}
+nav > a
+{
+	color: gray;
+	text-decoration: none;
+	margin: 2%;
+}
+
+.title
+{
+	text-align: center;
+	margin: 5%;
+	display: inline-block;
+}
+
+.slogan
+{
+	padding: 50px;
+	font-size: 60px;
+}
+.image
+{
+	float:right;
+	margin-right: 20px;
+}
+button{
+	display:block;
+}
+footer > p
+{
+	text-align: center;
+}
